--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="title_home">Home</string>
     <string name="title_gallery">Gallery</string>
     <string name="title_cart">Cart</string>
+    <string name="title_transaction">Transactions</string>
     <string name="title_profile">Profile</string>
     <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
